@@ -6,6 +6,8 @@ v3.6.1 (2020-XX-XX)
   This avoids potential undefined behavior in case a parallel GatherNode is used
   in graph queries.
 
+* Fix installation of arangoinspect and libraries in Windows client installer.
+
 * Fixed internal issue #656: While executing large amount of concurrent
   insert/removes iresearch seems to leak open file handles. This results in
   error 32 in cleanup (observed only on Windows as Linux doesn`t have file
